@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.zattoobox"
-       version="1.0.3"
+       version="1.0.4"
        name="Zattoo Box"
        provider-name="Pascal Nançoz">
   <requires>
