@@ -1,3 +1,6 @@
+[B]1.0.4[/B]
+- [Fix] Force session cache refresh if required
+
 [B]1.0.3[/B]
 - Fixed broken authentication URLs
 - Force cache refresh after upgrade
